--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								<h1>DevOps Fundamentals</h1>
 								<p> Learn how to excel in fusing operations and development
 														</p>
-								<p id="Oleksandr Chereshnevyi"></p>
+								<p id="myname">Oleksandr Chereshnevyi</p>
 							</div>
 						</div>
 						<nav>
